style: fix project card button alignment inconsistency

--- a/css/style.css
+++ b/css/style.css
@@ -815,6 +815,10 @@ img, svg {
   white-space: nowrap;
 }
 
+.project-actions a:nth-child(3):last-child {
+  grid-column: span 2;
+}
+
 /* ==========================================================================
    CERTIFICATIONS SECTION
    ========================================================================== */
